--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -29,7 +29,7 @@
   <section id="what" class="section">
     <h2>What is Stonkly?</h2>
     <p class="subtle" style="text-align:left;max-width:800px">
-      <strong>Stonkly</strong> is a student-built finance site that helps you understand stock moves quickly.
+      <strong>Stonkly</strong> is a student-built finance site that helps you understand how stock moves quickly.
       Type a ticker, get a clean price history, compare symbols side-by-side, and skim headlines for context —
       all in one place. It’s built for <em>beginners and busy students</em>: simple charts, minimal settings, and
       short explainers so you learn as you go. Data comes from public APIs (e.g., Finnhub) and the UI is light
