added description to top

--- a/lab1/predictions.html
+++ b/lab1/predictions.html
@@ -39,6 +39,8 @@
 
     <header id="home">
         <h1 style="font-size: 3rem;">Predictions</h1>
+        <div class="vertical-line"></div>
+        <h3>Estimated Trajectories for Tracked Stocks</h3>
     </header>
     <section id="gallery">
         <h1>Prediction Graph</h1>
