update stonkly homepage
rewrote descriptions

--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -101,21 +101,8 @@
     </script>
 
     <section id="stonkly-info">
-        <section class="hero" id="top">
-            <h1 class="page-title">Company Stock Data</h1>
-            <p class="subtle">Quickly jump into our analyzer to explore a company’s stock data.</p>
-        </section>
-
-        <section id="what" class="section">
-            <h2>What is Stonkly?</h2>
-            <p class="subtle" style="text-align:left;max-width:800px">
-            <strong>Stonkly</strong> is a student-built finance site that helps you understand how stock moves quickly.
-            Type a ticker, get a clean price history, compare symbols side-by-side, and skim headlines for context —
-            all in one place. It’s built for <em>beginners and busy students</em>: simple charts, minimal settings, and
-            short explainers so you learn as you go. Data comes from public APIs (e.g., Finnhub) and the UI is light
-            enough to run smoothly on a typical student laptop.
-            </p>
-
+        <h1>What is Stonkly?</h1>
+        <p>Stonkly is a student-built finance analysis site that helps users understand how stocks move. It provides detailed price histories, simple comparisons between companies, and recent news headlines to make following market trends easier. Designed for both beginners and experts alike, Stonkly plans to bridge the gap between the regular consumer and hedge fund manager by making stock data accessible and understandable, rather than overwhelming with features.</p>
             <div class="panel" style="margin-top:12px">
             <strong>What you’ll get</strong>
             <ul class="contact-list" style="margin-top:8px">
@@ -125,24 +112,6 @@
                 <li>Short definitions for common indicators</li>
             </ul>
             </div>
-        </section>
-
-        <section id="why" class="section">
-            <h2>Why we built it</h2>
-            <div class="panel">
-                <p class="subtle" style="text-align:left;max-width:800px">
-                    We’re Finance Group 13 (Gatcha!) for ITWS 2110. We wanted a project that blends
-                    <strong>web systems</strong> with <strong>real-world data</strong> and is actually useful for students.
-                    Most finance sites are overloaded with features; Stonkly keeps the signal and drops the noise.
-                </p>
-                <ul class="contact-list" style="margin-top:8px">
-                    <li><strong>Learn by doing:</strong> pull live data, render it, interact with it.</li>
-                    <li><strong>Clarity first:</strong> clean visuals and one-sentence explainers.</li>
-                    <li><strong>Open source:</strong> classmates can read and improve the code.</li>
-                    <li><strong>Portable:</strong> lightweight front end that runs anywhere.</li>
-                </ul>
-            </div>
-        </section>
 
         <section id="analyzer" class="section">
             <div class="panel" style="text-align:center">
