update to homepage

--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -101,17 +101,24 @@
     </script>
 
     <section id="stonkly-info">
-        <h1>What is Stonkly?</h1>
-        <p>Stonkly is a student-built finance analysis site that helps users understand how stocks move. It provides detailed price histories, simple comparisons between companies, and recent news headlines to make following market trends easier. Designed for both beginners and experts alike, Stonkly plans to bridge the gap between the regular consumer and hedge fund manager by making stock data accessible and understandable, rather than overwhelming with features.</p>
-            <div class="panel" style="margin-top:12px">
-            <strong>What you’ll get</strong>
-            <ul class="contact-list" style="margin-top:8px">
-                <li>Fast ticker lookup with readable charts</li>
-                <li>Quick comparisons to spot trends</li>
-                <li>Headline context next to price moves</li>
-                <li>Short definitions for common indicators</li>
-            </ul>
+        <div id="block">
+            <div id="infoBlock">
+                <h1>What is Stonkly💸?</h1>
+                <p>Stonkly is a student-built finance analysis site that helps users learn more about the Stock Market. 
+                  Designed for both beginners and experts alike, Stonkly plans to bridge the gap between the regular consumer 
+                  and hedge fund manager by making real-time stock data accessible and understandable, rather than overwhelming 
+                  users with features.</p>         
             </div>
+            <div id="featureList">
+                <strong> What you'll get</strong>
+                <ul>
+                    <li>Fast ticker lookup with readable charts</li>
+                    <li>Quick comparisons to spot trends</li>
+                    <li>Headline context next to price moves</li>
+                    <li>Short definitions for common indicators</li>
+                </ul>
+            </div>
+        </div>
 
         <section id="analyzer" class="section">
             <div class="panel" style="text-align:center">
