--- a/lab1/stonkly-data.html
+++ b/lab1/stonkly-data.html
@@ -10,13 +10,13 @@
     <!-- Navigation Bar -->
     <nav>
         <h1 class="title">
-            <a href="#" id="link0"> STONKLY💸</a>
+            <a href="stinkly.html" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="#" id="link1" class="nav-button">HOME</a></li>
+            <li><a href="stonkly.html" class="nav-button">HOME</a></li>
             <li><a href="stonkly-data.html" class="nav-button">COMPANIES</a></li>
             <li><a href="#" class="nav-button">PREDICTIONS</a></li> <!-- oliver will do this -->
-            <li><a href="#" id="link2" class="nav-button">OUR MISSION</a></li>
+            <li><a href="stonkly.html#stonkly-info" class="nav-button">OUR MISSION</a></li>
             <li><a href="#" class="nav-button">CONTACTS</a></li> <!-- somey will do this -->
         </ul>
     </nav>
