Fix css and styling

--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -110,12 +110,12 @@
                   users with features.</p>         
             </div>
             <div id="featureList">
-                <strong> What you'll get</strong>
+                <h1> What you'll get</h1>
                 <ul>
-                    <li>Fast ticker lookup with readable charts</li>
-                    <li>Quick comparisons to spot trends</li>
-                    <li>Headline context next to price moves</li>
-                    <li>Short definitions for common indicators</li>
+                    <li><input class="checkmark" type="checkbox" checked="checked" disabled>Fast ticker lookup with readable charts</li>
+                    <li><input type="checkbox" checked="checked" disabled>Quick comparisons to spot trends</li>
+                    <li><input type="checkbox" checked="checked" disabled>Headline context next to price moves</li>
+                    <li><input type="checkbox" checked="checked" disabled>Short definitions for common indicators</li>
                 </ul>
             </div>
         </div>
