Style stonkly page

--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -112,7 +112,7 @@
             <div id="featureList">
                 <h1> What you'll get</h1>
                 <ul>
-                    <li><input class="checkmark" type="checkbox" checked="checked" disabled>Fast ticker lookup with readable charts</li>
+                    <li><input type="checkbox" checked="checked" disabled>Fast ticker lookup with readable charts</li>
                     <li><input type="checkbox" checked="checked" disabled>Quick comparisons to spot trends</li>
                     <li><input type="checkbox" checked="checked" disabled>Headline context next to price moves</li>
                     <li><input type="checkbox" checked="checked" disabled>Short definitions for common indicators</li>
