Style stonkly page (2)

--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="resources/stonkly.css">
     <link rel="stylesheet" href="resources/styles.css">
     <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Stonkly 💸</title>
 </head>
 
@@ -112,10 +113,10 @@
             <div id="featureList">
                 <h1> What you'll get</h1>
                 <ul>
-                    <li><input type="checkbox" checked="checked" disabled>Fast ticker lookup with readable charts</li>
-                    <li><input type="checkbox" checked="checked" disabled>Quick comparisons to spot trends</li>
-                    <li><input type="checkbox" checked="checked" disabled>Headline context next to price moves</li>
-                    <li><input type="checkbox" checked="checked" disabled>Short definitions for common indicators</li>
+                    <li><i class="fa-solid fa-square-check fa-lg"></i>    Fast ticker lookup with readable charts</li>
+                    <li><i class="fa-solid fa-square-check fa-lg"></i>    Quick comparisons to spot trends</li>
+                    <li><i class="fa-solid fa-square-check fa-lg"></i>    Headline context next to price moves</li>
+                    <li><i class="fa-solid fa-square-check fa-lg"></i>    Short definitions for common indicators</li>
                 </ul>
             </div>
         </div>
