--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -121,14 +121,12 @@
             </div>
         </div>
 
-        <section id="analyzer" class="section">
-            <div class="panel" style="text-align:center">
-                <p class="subtle" style="margin-bottom:12px">
+        <div id="analyzer" class="section">
+                <h2 class="subtle" style="margin-bottom:12px">
                     Open the analyzer to search tickers, view charts, and see key context.
-                </p>
+                </h2>
                 <a class="btn" href="app.html">Open Company Analyzer →</a>
-            </div>
-        </section>
+        </div>
     </section>
 
     <footer id="contacts">
