edited some of the CSS and add peer companies

--- a/lab1/companies.html
+++ b/lab1/companies.html
@@ -127,12 +127,29 @@
       <div id="summary-container">
           <div id="info-content"></div>
       </div>
+      <div id="peers-container"></div>
+
+      <!-- EDIT THIS -->
       <div id="terminology">
-        <h3>Terminology</h3>
-        <p>*Initial Public Offering (IPO): </p>
-        <p>**Listed Exchange: </p>
-        <p>***Market Capitalization: </p>
-        <p>****Outstanding Shares: </p>
+        <div class="card">
+          <h3>Terminology</h3>
+          <p>*Initial Public Offering (IPO): The process in which a company decides to "go public" 
+            by selling shares of stock to the public. In essence the company's ownership is transitioning
+            from a private ownership to a public one.
+          </p>
+          <p>**Listed Exchange: Trading venue where an asset is officially made availible for public trading.</p>
+          <p>***Market Capitalization (Market Cap): The current market value of all the company's outstanding
+            stock shares. It's used to indicate a company's size and worth in comparison to its peers.
+          </p>
+          <p>****Outstanding Shares: The amount of company shares that are traded on the secondary market, ie 
+            the number of shares that are availible to investors. These include all restricted shares held by the
+            company's officers and insiders, as well as the quity portion owned by institutional investors.
+          </p>
+          <!-- Resource links, MOVE LATER -->
+          <!-- https://www.fidelity.com/learning-center/trading-investing/trading/investing-in-ipos -->
+          <!-- https://www.investopedia.com/terms/m/marketcapitalization.asp -->
+          <!-- https://corporatefinanceinstitute.com/resources/accounting/outstanding-shares/ -->
+        </div>
       </div>
   </section>
 
