--- a/lab1/stonkly.html
+++ b/lab1/stonkly.html
@@ -125,7 +125,7 @@
                 <h2 class="subtle" style="margin-bottom:12px">
                     Open the analyzer to search tickers, view charts, and see key context.
                 </h2>
-                <a class="btn" href="app.html">Open Company Analyzer →</a>
+                <a class="btn" href="stonkly-data.html">Open Company Analyzer →</a>
         </div>
     </section>
 
