updated meet team page

--- a/lab1/meet-team.html
+++ b/lab1/meet-team.html
@@ -28,7 +28,7 @@
     </nav>
 
     <header id="home">
-        <h1 style="font-size: 3rem;">Meet the Team</h1>
+        <img src="resources/images/webSysLogo.png"  alt="8th Wonder Website">
         <div class="vertical-line"></div>
         <div class="team-description">
             <h2>Team Gatcha is a group of six focused on developing an interactive site 
