somehow some styling got cooked i just updated links and centered div stuffs

--- a/lab1/companies.html
+++ b/lab1/companies.html
@@ -26,6 +26,10 @@
             height: 100%;
             z-index: -1;
         }
+        .card {
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 
