--- a/lab1/predictions.html
+++ b/lab1/predictions.html
@@ -84,11 +84,11 @@
             <a href="#" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="#" id="link1" class="nav-button">HOME</a></li>
-            <li><a href="#" id="link2" class="nav-button">COMPANY ANALYZER</a></li>
-            <li><a href="#" id="link2" class="nav-button">PREDICTIONS</a></li>
-            <li><a href="#" id="link3" class="nav-button">ABOUT US</a></li>
-            <li><a href="#" id="link4" class="nav-button">CONTACTS</a></li>
+            <li><a href="stonkly.html" id="link1" class="nav-button">HOME</a></li>
+            <li><a href="stonkly-data.html" class="nav-button">COMPANIES</a></li>
+            <li><a href="#" class="nav-button">PREDICTIONS</a></li> 
+            <li><a href="stonkly.html#stonkly-info" id="link2" class="nav-button">OUR MISSION</a></li>
+            <li><a href="meet-team.html" class="nav-button">CONTACTS</a></li> 
         </ul>
     </nav>
 
