Reorganize files, fixed navbar

--- a/Stonkly/companies.html
+++ b/Stonkly/companies.html
@@ -41,10 +41,12 @@
             <a href="#" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="#" id="link1" class="nav-button">HOME</a></li>
-            <li><a href="#" id="link2" class="nav-button">COMPANY ANALYZER</a></li>
-            <li><a href="#" id="link3" class="nav-button">ABOUT US</a></li>
-            <li><a href="#" id="link4" class="nav-button">CONTACTS</a></li>
+            <li><a href="./index.html" class="nav-button">HOME</a></li>
+            <li><a href="./companies.html" class="nav-button">COMPANIES</a></li>
+            <li><a href="./stock.html" class="nav-button">STOCK</a></li>
+            <li><a href="./predictions.html" class="nav-button">PREDICTIONS</a></li>
+            <li><a href="./mission.html" class="nav-button">OUR MISSION</a></li>
+            <li><a href="./meet-team.html" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
@@ -165,7 +167,7 @@
     <!-- Scripts -->
     <script src="resources/jquery-3.7.1.min.js"></script>
     <script src="resources/scriptV2.js"></script>
-    <script src="api2.js"></script>
+    <script src="./resources/api2.js"></script>
 
 </body>
 
