--- a/Stonkly/predictions.html
+++ b/Stonkly/predictions.html
@@ -7,73 +7,6 @@
     <link rel="stylesheet" href="resources/styles.css">
     <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
     <title>Stonkly 💸</title>
-    <style>
-        #link0 {
-            margin-left: 40px;
-            font-size: 30px;
-            font-weight: bold;
-        }
-
-        #link0:hover {
-            color: #8f5a26;
-            cursor: pointer;
-        }
-
-        .dropdown-menu {
-            display: none;
-            position: absolute;
-            z-index: 1000;
-        }
-
-        .dropdown-menu.show {
-            display: block;
-        }
-
-        .custom-dropdown {
-            position: relative;
-            display: inline-block;
-        }
-
-        .custom-dropdown-toggle {
-            background-color: #B87432;
-            color: white;
-            font-family: 'Monarch_Bold', Arial, sans-serif;
-            font-size: 18px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-        }
-
-        .custom-dropdown-toggle::after {
-            content: " ▼";
-            font-size: 0.7em;
-        }
-
-        .custom-dropdown-menu {
-            background-color: #F3DFCB;
-            border: 1px solid #B87432;
-            border-radius: 5px;
-            padding: 0;
-            margin: 5px 0 0;
-            list-style: none;
-            min-width: 200px;
-        }
-
-        .custom-dropdown-item {
-            color: #B87432;
-            font-family: 'Monarch_Bold', Arial, sans-serif;
-            font-size: 18px;
-            padding: 10px 15px;
-            display: block;
-            text-decoration: none;
-        }
-
-        .custom-dropdown-item:hover {
-            background-color: #B87432;
-            color: #FFF;
-        }
-    </style>
 </head>
 
 <body>
@@ -84,11 +17,12 @@
             <a href="#" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="stonkly.html" id="link1" class="nav-button">HOME</a></li>
-            <li><a href="stonkly-data.html" class="nav-button">COMPANIES</a></li>
-            <li><a href="#" class="nav-button">PREDICTIONS</a></li> 
-            <li><a href="stonkly.html#stonkly-info" id="link2" class="nav-button">OUR MISSION</a></li>
-            <li><a href="meet-team.html" class="nav-button">CONTACTS</a></li> 
+            <li><a href="./index.html" class="nav-button">HOME</a></li>
+            <li><a href="./companies.html" class="nav-button">COMPANIES</a></li>
+            <li><a href="./stock.html" class="nav-button">STOCK</a></li>
+            <li><a href="./predictions.html" class="nav-button">PREDICTIONS</a></li>
+            <li><a href="./mission.html" class="nav-button">OUR MISSION</a></li>
+            <li><a href="./meet-team.html" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
