--- a/Stonkly/meet-team.html
+++ b/Stonkly/meet-team.html
@@ -19,11 +19,12 @@
             <a href="#" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="stonkly.html" id="link1" class="nav-button">HOME</a></li>
-            <li><a href="stonkly-data.html" class="nav-button">COMPANIES</a></li>
-            <li><a href="predictions.html" class="nav-button">PREDICTIONS</a></li> 
-            <li><a href="stonkly.html#stonkly-info" id="link2" class="nav-button">OUR MISSION</a></li>
-            <li><a href="#" class="nav-button">CONTACTS</a></li> 
+            <li><a href="./index.html" class="nav-button">HOME</a></li>
+            <li><a href="./companies.html" class="nav-button">COMPANIES</a></li>
+            <li><a href="./stock.html" class="nav-button">STOCK</a></li>
+            <li><a href="./predictions.html" class="nav-button">PREDICTIONS</a></li>
+            <li><a href="./mission.html" class="nav-button">OUR MISSION</a></li>
+            <li><a href="./meet-team.html" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
