--- a/Stonkly/stock.html
+++ b/Stonkly/stock.html
@@ -10,14 +10,15 @@
     <!-- Navigation Bar -->
     <nav>
         <h1 class="title">
-            <a href="stinkly.html" id="link0"> STONKLY💸</a>
+            <a href="stonkly.html" id="link0"> STONKLY💸</a>
         </h1>
         <ul>
-            <li><a href="stonkly.html" id="link1" class="nav-button">HOME</a></li>
-            <li><a href="#" class="nav-button">COMPANIES</a></li>
-            <li><a href="predictions.html" class="nav-button">PREDICTIONS</a></li> 
-            <li><a href="stonkly.html#stonkly-info" id="link2" class="nav-button">OUR MISSION</a></li>
-            <li><a href="meet-team.html" class="nav-button">CONTACTS</a></li> 
+            <li><a href="./index.html" class="nav-button">HOME</a></li>
+            <li><a href="./companies.html" class="nav-button">COMPANIES</a></li>
+            <li><a href="./stock.html" class="nav-button">STOCK</a></li>
+            <li><a href="./predictions.html" class="nav-button">PREDICTIONS</a></li>
+            <li><a href="./mission.html" class="nav-button">OUR MISSION</a></li>
+            <li><a href="./meet-team.html" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
@@ -49,5 +50,5 @@
 
     <script src="resources/jquery-3.7.1.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="api.js"></script>
+    <script src="./resources/api.js"></script>
 </body>
