--- a/Previous labs/lab7/index.html
+++ b/Previous labs/lab7/index.html
@@ -104,7 +104,7 @@
             </ul>
         </nav>
         <main id="preview">
-            <h2 id="item-title">Select an item on the side to see details</h2>
+            <h2 id="item-title">Select an item on the side to see details if you dare...</h2>
             <div id="item-description">
                 <h2>Lecture Title</h2>
                 <p>Lecture Description</p>  
