--- a/Previous labs/lab7/index.html
+++ b/Previous labs/lab7/index.html
@@ -72,14 +72,17 @@
             background-color: rgb(226, 126, 3);
             cursor: pointer;
         }
+        #item-title {
+            color: #791c1c;
+        }
     </style>
 </head>
 <body>
     <nav id="header">
         <h1>Spooky Web Sys 🪦</h1>
         <div style="display: flex; gap: 10px;">
-            <div id="archive-button">Archive</div>
-            <div id="refresh-button">Refresh</div>
+            <div id="archive-button" data-id="" onclick="remove(this)">Archive</div>
+            <div id="refresh-button" onclick="refresh()">Refresh</div>
         </div>
         
     </nav>
@@ -107,8 +110,7 @@
             <h2 id="item-title">Select an item on the side to see details if you dare...</h2>
             <div id="item-description">
                 <h2>Lecture Title</h2>
-                <p>Lecture Description</p>  
-                <p>Additional Information/Details</p>
+                <p>Lecture Description</p>
             </div>
         </main>
     </div>
