--- a/Labs/lab7/index.html
+++ b/Labs/lab7/index.html
@@ -17,10 +17,13 @@
             flex-direction: column;
             height: 100vh;
         }
+        h1 {
+            font-size: 40px;
+        }
         #header {
             background-color: #333;
             color: white;
-            padding: 10px 20px;
+            padding: 8px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -30,21 +33,28 @@
             flex: 1;
         }
         #sidebar {
-            width: 250px;
+            width: 225px;
             background-color: #f4f4f4;
             border-right: 1px solid #ccc;
             overflow-y: auto;
+            font-size: 20px;
         }
         #preview {
             flex: 1;
-            padding: 20px;
+            padding: 30px;
+        }
+        #item-title{
+            font-size: 55px;
+        }
+        #item-description > h2{
+            font-size: 40px;
         }
         #lecture-header, #lab-header {
             background-color: rgb(124, 85, 38);
             color: white;
             padding: 10px;
             text-align: center;
-            font-size: 18px;
+            font-size: 25px;
         }
         #lab-content, #lecture-content {
             list-style-type: none;
@@ -52,6 +62,7 @@
         }
         #lab-content li, #lecture-content li {
             padding: 10px;
+            padding-left: 20px;
             border-bottom: 1px solid #ccc;
             cursor: pointer;
         }
