--- a/Stonkly/predictions.html
+++ b/Stonkly/predictions.html
@@ -5,11 +5,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/styles.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+
+        #gallery h1 {
+        margin-top: -20px;
+        margin-left: 70px;
+        }
+
+       #sectorTable {
+        font-family: Arial, sans-serif;
+        border-collapse: collapse;
+        width: 60%;              
+        margin: 30px auto; 
+        text-align: center;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        background-color: #fff;
+        overflow: hidden;      
+        margin-top: 54px;
+    }
+
+    #sectorTable th {
+        background-color: #af5519;
+        color: white;
+        font-weight: bold;
+        padding: 12px 15px;
+        text-align: center;
+        position: sticky;
+        top: 0;
+    }
+
+    #sectorTable td {
+        border-bottom: 1px solid #e0e0e0;
+        padding: 12px 15px;
+    }
+
+    #sectorTable tbody tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+
+    #sectorTable tbody tr:hover {
+        background-color: #fff1e1;
+        transition: background-color 0.3s ease;
+    }
+
+    #sectorTable caption {
+        caption-side: top;
+        font-size: 1.5em;
+        font-weight: bold;
+        margin-bottom: 15px;
+        color: #2c3e50;
+    }
+    
+    #sectorDescription {
+        max-width: 95%;           
+        margin: 20px auto;         
+        padding: 15px 20px ;      
+        text-align: center;      
+        font-size: 1.1rem;        
+        line-height: 1.6;        
+        color: #333;             
+        background-color: #fff7f0;
+        border-radius: 10px;       
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        transition: all 0.3s ease; 
+    }
+
+    #sectorDescription:hover {
+        background-color: #fff1e1;
+        transform: translateY(-10px);
+    }
+
+    #sectorDescription ul {
+        text-align: left;        
+        margin-top: 10px;       
+    }
+
+    #etfSectorGrouping {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 40px;
+    }
+
+    #sectorPieChart {
+        margin-top: -30px;
+        height: auto;   
+        font-size: small; 
+        text-align: center; 
+        margin-left: -25px;
+    }
+
+    #container {
+        width: 48%;
+        padding: auto;
+    }
+
+    #container h3 {
+        text-align: center;
+        font-size: 1.5rem;
+        margin-bottom: -30px;
+        margin-top: -20px;
+        color: #333;
+    }
+
+    #gallery h1 {
+        margin-bottom: -30px;
+    }
+
+    </style>
     <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
     <title>Stonkly 💸</title>
 </head>
 
 <body>
+    <script src="py_backend/queryFinance.js"></script>
 
     <!-- Navigation Bar -->
     <nav>
@@ -27,32 +142,35 @@
     </nav>
 
     <header id="home">
-        <h1 style="font-size: 3rem;">Predictions</h1>
+        <h1 style="font-size: 3rem;">ETF Sector Statistics</h1>
         <div class="vertical-line"></div>
-        <h3>Estimated Trajectories for Tracked Stocks</h3>
+        <h3>Gain insights into the investment landscape and learn more about ETF sector performance.</h3>
     </header>
     <section id="gallery">
-        <h1>Prediction Graph</h1>
-
-        <div class="custom-dropdown" id="company-selector">
-            <button class="custom-dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                Select a Company
-            </button>
-            <ul class="custom-dropdown-menu dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="custom-dropdown-item dropdown-item" href="#" data-company="Company A">Company A</a></li>
-                <li><a class="custom-dropdown-item dropdown-item" href="#" data-company="Company B">Company B</a></li>
-                <li><a class="custom-dropdown-item dropdown-item" href="#" data-company="Company C">Company C</a></li>
-            </ul>
-        </div>
-
-        <div id="chart-container">
-            <img id="chart" width="800" height="400" src="./resources/images/predictions-placeholder.png">
-            <div id="cardAdd">
-                <div class="card">
-                    <h3>Company Name</h3>
-                    <p>Price: $?.??</p>
-                    <p>Stock Velocity: ?.??($/Hour)</p>
+        <h1>ETF Sector Statistics</h1>
+        
+        <div id = "etfSectorGrouping">
+            <table id="sectorTable">
+                    <thead>
+                    <tr>
+                        <th>AUM Rank</th>
+                        <th>Sector</th>
+                        <th>Assets Under Management (MM)</th>
+                        <th>Number of ETFs</th>
+                    </tr>
+                    </thead>
+                    <tbody></tbody>
+            </table>
+            <div id="container">
+                <div id ="sectorDescription">
+                    <h2>What is an ETF Sector? 🤔</h2> 
+                    <ul>
+                        <li>ETF Sectors are a collection of exchange-traded funds (ETFs) that are focused on a specific industry or market</li>
+                        <li>They allow investors to target investments based on market outlook and give insights into Tariff effects on an industry.</li>
+                    </ul>
                 </div>
+                <h3>Sector Distribution 📊</h3>
+                <div id="sectorPieChart"></div>
             </div>
         </div>
     </section>
