--- a/Stonkly/predictions.html
+++ b/Stonkly/predictions.html
@@ -190,6 +190,16 @@
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
+    .search-card:hover {
+        background-color: rgb(227, 196, 176);
+        transform: translateY(-10px);
+    }
+
+    .sector-card:hover {
+        background-color: rgb(227, 196, 176);
+        transform: translateY(-10px);
+    }
+
     .search-card h3 {
         margin-top: 0;
         color: #a0522d;
