--- a/Stonkly/static_html/predictions.html
+++ b/Stonkly/static_html/predictions.html
@@ -132,6 +132,7 @@
         gap: 20px;
         justify-content: center;
         flex-wrap: wrap;
+        margin-bottom: 30px;
     }
 
     .sector-card {
@@ -200,6 +201,15 @@
         transform: translateY(-10px);
     }
 
+    #analysis-card {
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 20px;
+        text-align: center;
+        width: 500px;
+        flex-direction: column;
+    }
+
     .search-card h3 {
         margin-top: 0;
         color: #a0522d;
@@ -240,6 +250,202 @@
         border-radius: 10px;
         min-height: 214px;
         box-shadow: inset 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .etf-graph-analysis {
+        background-color: #F3DFCB;
+        padding: 20px;
+        border-radius: 20px;    
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .etf-graph-analysis-innerbox {
+        display: flex;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid #d2a679;
+        background-color: #fff4f0;
+    }
+
+    /* Floating Chat Button */
+    /* Chat Messages Container */
+    /* Chat Widget Window */
+    #chat-widget {
+        position: fixed;
+        bottom: 25px;
+        right: 25px;
+        width: 350px;
+        height: 450px;        /* fixed height */
+        max-height: 90vh;
+        background: #F5EBDD;
+        border-radius: 15px;
+        display: none;
+        flex-direction: column;
+        overflow: hidden;      /* prevent overflowing outside widget */
+        z-index: 1000;
+    }
+
+    /* Header always visible */
+    #chat-header {
+        background: #A9746E;
+        color: #fff8f0;
+        padding: 12px 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+        font-size: 16px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        flex-shrink: 0;        /* prevent shrinking */
+    }
+
+    /* Chat body takes remaining space */
+    #chat-body {
+        display: flex;
+        flex-direction: column;
+        height: calc(100% - 60px); /* subtract header & input approx height */
+    }
+
+    /* Messages scrollable, moves up with new messages */
+    #chat-messages {
+        flex: 1;               /* fills available space */
+        overflow-y: auto;      /* scrolls when overflowing */
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        padding: 5px 10px;
+    }
+
+    /* Input always visible at bottom */
+    #chat-input {
+        padding: 10px;
+        border-radius: 12px;
+        border: 1px solid #CBB69A;
+        outline: none;
+        font-size: 14px;
+        background: #FFF7ED;
+        margin-top: 5px;
+        flex-shrink: 0;        /* prevents shrinking */
+    }
+
+    /* Optional: highlight input on focus */
+    #chat-input:focus {
+        border-color: #A9746E;
+    }
+
+    /* User message bubble (right) */
+    #chat-messages .user-msg {
+        align-self: flex-end;          /* right side */
+        background: #D9B99B;           /* light brown */
+        color: #3e2f24;
+        padding: 10px 14px;
+        border-radius: 18px 18px 0 18px; /* rounded corners with “tail” effect */
+        max-width: 75%;
+        word-wrap: break-word;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+        position: relative;
+    }
+
+    /* Optional: add small “tail” using ::after */
+    #chat-messages .user-msg::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: -6px;                   /* outside bubble */
+        width: 0;
+        height: 0;
+        border-top: 10px solid #D9B99B;
+        border-left: 6px solid transparent;
+        border-right: 0 solid transparent;
+    }
+
+    /* Bot message bubble (left) */
+    #chat-messages .bot-msg {
+        align-self: flex-start;        /* left side */
+        background: #EEDFCC;           /* lighter tan */
+        color: #3e2f24;
+        padding: 10px 14px;
+        border-radius: 18px 18px 18px 0; /* rounded corners with “tail” effect */
+        max-width: 75%;
+        word-wrap: break-word;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+        position: relative;
+    }
+
+    #chat-messages .bot-msg::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: -6px;                    /* outside bubble */
+        width: 0;
+        height: 0;
+        border-top: 10px solid #EEDFCC;
+        border-left: 0 solid transparent;
+        border-right: 6px solid transparent;
+    }
+
+    /* User bubble */
+    .user-msg {
+        align-self: flex-end;
+        background: #D9B99B;
+        color: #3e2f24;
+        padding: 10px 14px;
+        border-radius: 18px 18px 0 18px;
+        max-width: 75%;
+        word-wrap: break-word;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+        position: relative;
+        margin-bottom: 6px;
+    }
+
+    /* Bot bubble */
+    .bot-msg {
+        align-self: flex-start;
+        background: #EEDFCC;
+        color: #3e2f24;
+        padding: 10px 14px;
+        border-radius: 18px 18px 18px 0;
+        max-width: 75%;
+        word-wrap: break-word;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+        position: relative;
+        margin-bottom: 6px;
+    }
+
+    /* Optional: “typing dots” animation */
+    .bot-msg.typing::after {
+        content: '...';
+        display: inline-block;
+        width: 18px;
+        animation: blink 1s infinite;
+    }
+
+    @keyframes blink {
+        0%, 50%, 100% { opacity: 0; }
+        25%, 75% { opacity: 1; }
+    }
+
+    #chat-toggle {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background: #975929;
+        color: white;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        z-index: 1000;
+    }
+
+    #chat-toggle:hover {
+        background: #683a17;
     }
     </style>
     <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
@@ -320,10 +526,37 @@
                     <input type="text" id="etfSearchInput" placeholder="Enter ETF name or symbol">
                     <button id="etfSearchButton">Search</button>
                 </div>
-                <div id="etfResult"></div>
+                <div class="etf-analysis">
+                    <div id="etfResult"></div>
+                </div>
+            </div>
+        </div>
+        <div class = "etf-graph-analysis">
+            <h3>Current ETF Close Prices [Last 60 Days]</h3>
+            <div class ="etf-graph-analysis-innerbox">
+                <div id="analysis-card">
+                    <h4>Analysis:</h4>
+                    <div id="anal"></div>
+                </div>
+                <div id="etfGraphing"></div>
             </div>
         </div>
     </section>
+
+    <!-- Chat Bot Button -->
+    <div id="chat-toggle">💬</div>
+
+    <!-- Chat Widget -->
+    <div id="chat-widget">
+    <div id="chat-header">
+        <span>Chat with us</span>
+        <button id="chat-close">✖</button>
+    </div>
+    <div id="chat-body">
+        <div id="chat-messages"></div>
+        <input type="text" id="chat-input" placeholder="Type a message..." />
+    </div>
+    </div>
 
     <footer id="contacts">
         <p>&copy; 2025 Gatcha!. All rights reserved.</p>
