--- a/Stonkly/static_html/index.html
+++ b/Stonkly/static_html/index.html
@@ -18,13 +18,10 @@
         <h1 class="title">
             <a href="#" id="link0"> STONKLY💸</a>
         </h1>
-        <ul>
+        <ul> 
             <li><a href="./index.html" class="nav-button">HOME</a></li>
-            <li><a href="./companies.html" class="nav-button">COMPANIES</a></li>
-            <li><a href="./stock.html" class="nav-button">STOCK</a></li>
-            <li><a href="./predictions.html" class="nav-button">PREDICTIONS</a></li>
-            <li><a href="./mission.html" class="nav-button">OUR MISSION</a></li>
             <li><a href="./meet-team.html" class="nav-button">CONTACTS</a></li>
+            <li><a href="./login.php" class="nav-button">LOGIN</a></li>
         </ul>
     </nav>
 
@@ -126,7 +123,7 @@
                 <h2 class="subtle" style="margin-bottom:12px">
                     Open the analyzer to search tickers, view charts, and see key context.
                 </h2>
-                <a class="btn" href="stock.html">Open Company Analyzer →</a>
+                <a class="btn" href="login.php">Open Company Analyzer →</a>
         </div>
     </section>
 
